// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GithubForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly for azure 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <AzureForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly for bitbucket 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <BitbucketForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        isUpdate={false}
        onFieldChange={[MockFunction]}
        onVariantChange={[MockFunction]}
        variant="bitbucket"
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly for github 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GithubForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly for gitlab 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GitlabForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: editing 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.edit"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.edit
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GithubForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: submitting 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GithubForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={true}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: with validation error 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <GithubForm
        formData={
          {
            "appId": "123456",
            "clientId": "client1",
            "clientSecret": "**clientsecret**",
            "key": "key",
            "privateKey": "asdf1234",
            "url": "http://github.enterprise.com",
            "webhookSecret": "verySecretText!!",
          }
        }
        onFieldChange={[MockFunction]}
      />
      <Alert
        variant="error"
      >
        <p
          className="spacer-bottom"
        >
          settings.almintegration.configuration_invalid
        </p>
        <ul
          className="list-styled"
        >
          <li>
            this is a validation error
          </li>
        </ul>
      </Alert>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
        <DeferredSpinner
          className="spacer-left"
          loading={false}
        />
      </SubmitButton>
      <ResetButtonLink
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
